# w9-mail

./: README.md  docker-compose.swarm.yml  docker-compose.yml  install.sh
.github/workflows/: docker-build.yml
backend/: Cargo.toml
backend/src/: auth.rs  email.rs  handlers.rs  mailer.rs  main.rs
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts
frontend/app/components/: Footer.tsx  NetworkBar.tsx
frontend/app/docs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/manage/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/signup/verify/: page.tsx
frontend/app/terms/: page.tsx
frontend/lib/: session.ts
public/: sitemap.xml
