[package]
name = "w9-mail-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
async-imap = "0.7"
async-pop3 = "0.1"
native-tls = "0.2"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
dotenv = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

